2012-08-16  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        [Qt] Remove an unused variable

        Reviewed by Simon Hausmann.

        * UIProcess/API/qt/qquickwebpage.cpp:
        (QQuickWebPagePrivate::QQuickWebPagePrivate):
        * UIProcess/API/qt/qquickwebpage_p_p.h:
        (QQuickWebPagePrivate):

2012-08-16  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        [Qt][WK2] Change the default cache model to enable the page cache
        https://bugs.webkit.org/show_bug.cgi?id=94221

        Reviewed by Simon Hausmann.

        The default CacheModelDocumentViewer disables the memory back-forward page cache.
        As uses of applications using QQuickWebView might vary, I'm setting the default to
        CacheModelDocumentBrowser.
        We should eventually expose this in the API to allow serious Web browsers setting it
        to CacheModelPrimaryWebBrowser or to CacheModelDocumentViewer for application tight
        on memory with limited page navigations.

        * UIProcess/qt/QtWebContext.cpp:
        (WebKit::QtWebContext::defaultContext):

2012-08-15  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        [Qt] Make sure that we don't prematurely force the first layout during loading.
        https://bugs.webkit.org/show_bug.cgi?id=94106

        Reviewed by Kenneth Rohde Christiansen.

        This would have the nasty effect that the frame loader would report the first layout
        before loadCommitted was reported. This would resume the rendering engine prematurely,
        showing blank content and reporting an empty contents size.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::setFixedLayoutSize):

2012-08-16  Marcelo Lira  <marcelo.lira@openbossa.org>

        [Qt] Input method hints are not being set.
        https://bugs.webkit.org/show_bug.cgi?id=92386

        Reviewed by Kenneth Rohde Christiansen.

        Input method hints for an editable element must be obtained from a proper